--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,11 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "easycorp/easyadmin-bundle": "^2.0",
+        "friendsofsymfony/ckeditor-bundle": "^2.0",
+        "friendsofsymfony/user-bundle": "~2.0",
         "mustangx/eu-cookie-law-bundle": "^1.0",
-        "sensio/framework-extra-bundle": "^5.1",
+        "sensio/framework-extra-bundle": "^5.2",
         "shivas/versioning-bundle": "^3.1",
         "symfony/asset": "4.2.*",
         "symfony/console": "4.2.*",
@@ -31,6 +34,7 @@
         "twig/extensions": "^1.5"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.0",
         "symfony/debug-pack": "*",
         "symfony/maker-bundle": "^1.0",
         "symfony/profiler-pack": "*",
